Arregla vistas Elimina costo de clase

--- a/src/escuela/templates/clases.html
+++ b/src/escuela/templates/clases.html
@@ -31,9 +31,9 @@
 
                             <thead>
                             <tr>
-                                <th>Nombre</th>
-                                <th>Descripcion</th>
-                                <th>Costo(Gs)</th>
+                                <th>Nombre de Clase</th>
+                                <th>Descripción</th>
+
                                 <th>Acción</th>
                             </tr>
                             </thead>
@@ -43,7 +43,7 @@
                                 <tr>
                                     <td>{{ clase.nombre }}</td>
                                     <td>{{ clase.descripcion }}</td>
-                                    <td>{{ clase.costo }}</td>
+
                                     <td><a class="btn btn-info btn-xs" href="/escuela/clases/{{ clase.id }}/update">Editar </a>
 
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
