--- a/src/main/templates/main/titulares.html
+++ b/src/main/templates/main/titulares.html
@@ -39,8 +39,8 @@
                             <th>Fecha de nacimiento</th>
                             <th>Sexo</th>
                             <th>Dirección</th>
-                            <th>Teléfono1</th>
-                            <th>Teléfono2</th>
+                            <th>Teléfono</th>
+                            <th>Otro contacto</th>
                             <th>Estado</th>
                             <th>Tipo responsable</th>
 
