--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -25,7 +25,7 @@
 
 
 
-                         <li><a href="/escuela/etiqueta/new">Etiquetas</a></li>
+{#                         <li><a href="/escuela/etiqueta/new">Etiquetas</a></li>#}
                     </ul>
                 </li>
                 <li><a><img src="/static/img/alumnos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
