--- a/src/tienda/templates/ventas.html
+++ b/src/tienda/templates/ventas.html
@@ -36,10 +36,10 @@
                                     <th>Cliente</th>
                                     <th>Fecha</th>
                                     <th>Monto Total</th>
-                                    <th>Gravadas 5</th>
-                                    <th>Gravadas 10</th>
+                                    <th>Gravadas 5%</th>
+                                    <th>Gravadas 10%</th>
                                     <th>Gravadas Excentas</th>
-                                    <th>Total IVA</th>
+                                    <th>Monto Total</th>
                                     <th>Estado</th>
                                     <th>Acción</th>
                             </tr>
