--- a/src/tienda/templates/compras-form.html
+++ b/src/tienda/templates/compras-form.html
@@ -45,7 +45,7 @@
                         <div class="ln_solid"></div>
                         <div class="form-group">
                             <div class="col-md-12 text-center">
-                                <a class="btn btn-primary" type="button" href="/tienda/compras/">Cancelar</a>
+                                <a class="btn btn-primary" type="button" href="/">Cancelar</a>
                                 <input type="submit" class="btn btn-success" value="Guardar"/>
                             </div>
                         </div>
