--- a/src/tienda/templates/compras-form.html
+++ b/src/tienda/templates/compras-form.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="page-title">
         <div class="title_left">
-            <h3><strong>Nueva Compra</strong></h3>
+            <h3><strong>Registro de Egresos</strong></h3>
         </div>
     </div>
     <div class="clearfix"></div>
