--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -1,119 +1,88 @@
 <div class="left_col scroll-view">
     <div class="navbar nav_title">
         <a href="/  " class="site_title"><img src="/static/img/logo.png" width="25px" class="img-circle"
-                                              style="margin: 0.3em 0.6em 0.6em"> <span>Aquasoft</span></a>
+                                              style="margin: 0.3em 0.6em 0.6em"> <span>AQUASOFT</span></a>
     </div>
-
     <div class="clearfix"></div>
-
-
     <br/>
-
     <!-- sidebar menu -->
     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-        <div class="menu_section">
-            <h3>General</h3>
+        <div class="menu_section" >
+{#            <h3 class="text-center">Menú principal</h3>#}
             <ul class="nav side-menu">
-
-                <li><a><img src="/static/img/cursos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Cursos
+            <li><a><img src="/static/img/asistencia_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
+                    Alumnos
                     <span class="fa fa-chevron-down"></span></a>
-                     <ul class="nav child_menu">
-                        <li><a href="/escuela/clases">Mantenimiento de Clases</a></li>
-                        <li><a href="/escuela/clases/new">Nueva Clase</a></li>
-                         <li><a href="/escuela/grupos">Mantenimiento de Grupos</a></li>
-                         <li><a href="/escuela/grupos/new">Nuevo Grupo</a></li>
-
-
-
-{#                         <li><a href="/escuela/etiqueta/new">Etiquetas</a></li>#}
-                    </ul>
-                </li>
-                <li><a><img src="/static/img/alumnos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
-                    Alumnos <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/escuela/inscripciones/new">Nueva Inscripción</a></li>
-                        <li><a href="/escuela/inscripciones">Inscripciones</a></li>
+                        <li><a href="/escuela/inscripciones/new"> Nueva inscripción</a></li>
+                        <li><a href="/escuela/inscripciones">Consulta inscripciones</a></li>
+                        <li><a href="/escuela/asistencia/new">Asistencia</a></li>
+                        <li><a href="/alumnos">Alumnos</a></li>
+                        <li><a href="/titulares">Titulares</a></li>
                         {% if perms.escuela.inscripcion_baja %}
-                        <li><a href="/escuela/inscripciones/bajas">Baja de Inscripción</a></li>
+                            <li><a href="/escuela/inscripciones/bajas">Baja de inscripción</a></li>
                         {% endif %}
-                        <li><a href="/alumnos">Mantenimiento de Alumnos</a></li>
-                        <li><a href="/alumnos/new">Nuevo Alumno</a></li>
-                        <li><a href="/titulares">Mantenimiento de Titulares</a></li>
-
-
-
                     </ul>
                 </li>
-                <li><a><img src="/static/img/profesores_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
+                <li><a><img src="/static/img/cursos_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
+                    Clases
+                    <span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                        <li><a href="/escuela/clases">Clases</a></li>
+                        <li><a href="/escuela/grupos">Grupos</a></li>
+                        {#                         <li><a href="/escuela/etiqueta/new">etiquetas</a></li>#}
+                    </ul>
+                </li>
+                <li><a><img src="/static/img/profesores_blanco.png" width="27px"
+                            style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Staff <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/profesores">Mantenimiento de Profesores</a></li>
-                        <li><a href="/profesores/new">Nuevo Profesor</a></li>
-                        <li><a href="/empleados">Mantenimiento del Personales</a></li>
-                        <li><a href="/empleados/new">Nuevo Personal</a></li>
-
-
+                        <li><a href="/profesores">Profesores</a></li>
+                        <li><a href="/empleados">Personales</a></li>
                     </ul>
                 </li>
-
-                <li><a><img src="/static/img/asistencia_blanco.png" width="27px" style="margin: 0.3em 0.6em 0.6em 0.6em">
-                    Asistencia <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="/escuela/asistencia/new">Registrar Asistencia</a></li>
-                    </ul>
-                </li>
-                <li><a><img src="/static/img/pagos_blanco.png" width="28px" style="margin: 0.3em 0.6em 0.6em 0.6em"> Cuentas
-                    <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu">
-                        <li><a href="/escuela/cuentas" >Cuentas a cobrar</a></li>
-{#                       <li><a href="#">Cuentas a Cobrar</a></li>#}
-{#                        <li><a href="#">Cuentas a Pagar</a></li>#}
-
-                    </ul>
-                </li>
-
-                <li><a><img src="/static/img/indumentaria_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
+            <li><a><img src="/static/img/indumentaria_blanco.png" width="29px"
+                            style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/ventas/new">Nueva Venta</a></li>
-                        <li><a href="/tienda/ventas">Consulta de Ventas</a></li>
-
-                        <li><a href="/tienda/clientes/new">Nuevo Cliente</a></li>
-                         <li><a href="/tienda/clientes">Mantenimiento de Clientes</a></li>
-
-                        <li><a href="/tienda/facturas">Mantenimiento de Facturas</a></li>
-{#                        <li><a href="">Mantenimiento de Clientes</a></li>#}
+                        <li><a href="/tienda/ventas/new">Vender</a></li>
+                        <li><a href="/tienda/ventas">Ventas realizadas</a></li>
+                        <li><a href="/tienda/ventas">Ventas canceladas</a></li>
+                        <li><a href="/escuela/cuentas">Cuentas a cobrar</a></li>
+                        <li><a href="/tienda/clientes">Clientes</a></li>
+                        <li><a href="/tienda/productos">Productos</a></li>
+                        <li><a href="/tienda/facturas">Talonario Factura </a></li>
+                        {#                        <li><a href="">mantenimiento de clientes</a></li>#}
                     </ul>
                 </li>
-
-                <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
-                    Egresos <span class="fa fa-chevron-down"></span></a>
+                <li><a><img src="/static/img/pagos_blanco.png" width="28px" style="margin: 0.3em 0.6em 0.6em 0.6em">
+                    Finanzas
+                    <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="/tienda/compras/new">Registrar egresos</a></li>
-                        <li><a href="/tienda/compras">Consultar egresos</a></li>
-{#                        <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>#}
-{#                        <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>#}
-                        <li><a href="/tienda/productos/new">Registrar Productos</a></li>
-                        <li><a href="/tienda/productos">Consultar productos</a></li>
-
+                        <li><a href="/tienda/caja">Caja chica</a></li>
+                        <li><a href="/tienda/compras">Gastos</a></li>
+                        <li><a href="/tienda/compras">Ingresos</a></li>
+                        <li><a href="/tienda/compras">Balance</a></li>
+                        {#                       <li><a href="#">cuentas a cobrar</a></li>#}
+                        {#                        <li><a href="#">cuentas a pagar</a></li>#}
                     </ul>
                 </li>
-
                 <li><a><img src="/static/img/reportes_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Reportes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="#">Cuotas a vencer</a></li>
-{#                        <li><a href="">Asistencias</a></li>#}
-{#                        <li><a href="#">etc</a></li>#}
+                        <li><a href="#">Total ingresos</a></li>
+                        <li><a href="#">Total egresos</a></li>
+                        <li><a href="#">Total ganancias</a></li>
+                        <li><a href="#">Total alumnos</a></li>
+                        <li><a href="#">Cuotas por vencer</a></li>
+                        <li><a href="#">Asistencias </a></li>
                     </ul>
                 </li>
-
                 <li><a><img src="/static/img/ajustes_blanco.png" width="25px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ajustes <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/admin/auth/user/">Usuarios</a></li>
                         <li><a href="/admin/auth/group/">Roles</a></li>
-
                     </ul>
                 </li>
             </ul>
