--- a/src/tienda/templates/operacion_caja-form.html
+++ b/src/tienda/templates/operacion_caja-form.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="page-title">
         <div class="title_left">
-            <h3>Registro de Egresos</h3>
+            <h3>NUEVA OPERACIÓN</h3>
         </div>
     </div>
     <div class="clearfix"></div>
@@ -11,14 +11,14 @@
             <div class="x_panel">
                 <div class="x_content">
                     <br/>
-                    <form id="compradetalle" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
+                    <form id="crearfactura" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
                         {% csrf_token %}
                         {% include "forms/form.html" with form=form %}
 
                         <div class="ln_solid"></div>
                         <div class="form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                <a class="btn btn-primary" type="button" href="/tienda/compras/">Cancelar</a>
+                                <a class="btn btn-primary" type="button" href="/tienda/caja">Cancelar</a>
                                 <button class="btn btn-primary" type="reset">Limpiar</button>
                                 <input type="submit" class="btn btn-success" value="Guardar" />
                             </div>
@@ -29,4 +29,22 @@
             </div>
         </div>
     </div>
+{% endblock %}
+{% block javascripts %}
+    {{ block.super }}
+    <script>
+
+
+        function configurarICheck(element) {
+            element.parents('ul').attr('style', 'list-style-type: none;padding:0');
+            element.iCheck({
+                checkboxClass: 'icheckbox_flat-green',
+                radioClass: 'iradio_flat-green'
+            });
+        }
+        $(document).ready(function () {
+
+            configurarICheck($("[name=tipo_transaccion]"));
+        })
+    </script>
 {% endblock %}
