Agrega Ayuda con modal

--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -139,3 +139,12 @@
     </script>
     <script src="/static/inscripcion.js"></script>
 {% endblock %}
+
+
+{#AYUDA#}
+{% block ayuda_titulo %}
+    Inscripcion
+{% endblock %}
+{% block ayuda_contenido %}
+    <h4 style="color: red">contenido</h4> siga los <strong>pasos</strong>
+{% endblock %}
