Agrega Ayuda con modal

--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -143,8 +143,8 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-    Inscripcion
+    Inscripción
 {% endblock %}
 {% block ayuda_contenido %}
-    <h4 style="color: red">contenido</h4> siga los <strong>pasos</strong>
+    <h4 style="color: #597aff">contenido</h4> siga los <strong>pasos</strong>
 {% endblock %}
