--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -143,8 +143,8 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-    Inscripción
+   <strong>AYUDA INSCRIPCIÓN</strong>
 {% endblock %}
 {% block ayuda_contenido %}
-    <h4 style="color: #597aff">contenido</h4> siga los <strong>pasos</strong>
+    <strong>PASOS A SEGUIR</strong>
 {% endblock %}
