--- a/src/escuela/templates/grupos.html
+++ b/src/escuela/templates/grupos.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load humanize %}
+{% load intdot %}
 {% block content %}
 
     <div class="page-title">
@@ -55,7 +56,7 @@
                                     <td>{{ grupo.id_clase }}</td>
                                     <td>{{ grupo.id_profesor }}</td>
                                     <td>{{ grupo.cupo_maximo }}</td>
-                                    <td>{{ grupo.costo | intcomma }}</td>
+                                    <td>{{ grupo.costo | intdot }}</td>
                                     <td>{{ grupo.hora_inicio }}</td>-<td>{{ grupo.hora_fin }}</td>
 {#                                    <td>{{ grupo.lunes }}</td>#}
 {#                                    <td>{{ grupo.martes }}</td>#}
