--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -146,5 +146,22 @@
    <strong>AYUDA INSCRIPCIÓN</strong>
 {% endblock %}
 {% block ayuda_contenido %}
-    <strong>PASOS A SEGUIR</strong>
+    <p style="text-align: center;"><br/><span
+            style="font-size: 14pt;"><strong>Proceso de inscripci&oacute;n</strong></span></p>
+    <p style="text-align: center;">Para llevar a cabo una inscripci&oacute;n es necesario que se encuentre creado un
+        Grupo de clases y &eacute;stos tengan cupos disponibles. Siga los siguientes pasos:&nbsp;</p>
+    <p style="text-align: center;">&nbsp;</p>
+    <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span>
+    </p>
+    <p><br/>&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong> C&eacute;dula, Nombre
+        y Apellido , Fecha de Nac...</p>
+    <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Otro contacto ,</p>
+    <p>&bull;<strong> Siguiente</strong></p>
+    <p><br/><span style="color: #003366;"><strong>Paso 2. Agregar alumno :&nbsp;Puede elegir de la lista , o bien crear uno nuevo.</strong></span>
+    </p>
+    <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em> C&eacute;dula, Nombre y
+        Apellido , Fecha de Nac...</p>
+    <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Otro contacto ,</p>
+    <p>Si desea agregar m&aacute;s alumnos , presione el signo&nbsp;<img src="/static/img/plus.png" alt="signo_mas"/>
+    </p>
 {% endblock %}
