--- a/src/escuela/templates/inscripciones-bajas.html
+++ b/src/escuela/templates/inscripciones-bajas.html
@@ -104,3 +104,13 @@
         }
     </script>
 {% endblock %}>
+
+{#AYUDA#}
+{% block ayuda_titulo %}
+   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Baja de Inscripciones</strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+        <p><span style="color: #003366;"><strong>Se visualiza el listado de todo los alumnos activos:</strong></span></p>
+        <p><br />&bull; <strong><em>Puede dar de baja al alumno cuando abandona el curso o la clase ha terminado, asi deja de generar cuentas a su nombre.</em></strong></p>
+        <p><br />&bull; <strong><em>Confirmar o Cancelar la baja.</em></strong></p>
+{% endblock %}
