--- a/src/escuela/templates/inscripciones-form.html
+++ b/src/escuela/templates/inscripciones-form.html
@@ -19,7 +19,7 @@
                                     <span class="step_descr">
                                               Paso 1<br>
                                               <small>Titular</small>
-                                          </span>
+                                    </span>
                                 </a>
                             </li>
                             <li>
@@ -143,25 +143,24 @@
 
 {#AYUDA#}
 {% block ayuda_titulo %}
-   <strong>AYUDA INSCRIPCIÓN</strong>
+   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Proceso de Inscripci&oacute;n</strong></span></p>
 {% endblock %}
 {% block ayuda_contenido %}
-    <p style="text-align: center;"><br/><span
-            style="font-size: 14pt;"><strong>Proceso de inscripci&oacute;n</strong></span></p>
-    <p style="text-align: center;">Para llevar a cabo una inscripci&oacute;n es necesario que se encuentre creado un
-        Grupo de clases y &eacute;stos tengan cupos disponibles. Siga los siguientes pasos:&nbsp;</p>
-    <p style="text-align: center;">&nbsp;</p>
-    <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span>
-    </p>
-    <p><br/>&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong> C&eacute;dula, Nombre
-        y Apellido , Fecha de Nac...</p>
-    <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Otro contacto ,</p>
-    <p>&bull;<strong> Siguiente</strong></p>
-    <p><br/><span style="color: #003366;"><strong>Paso 2. Agregar alumno :&nbsp;Puede elegir de la lista , o bien crear uno nuevo.</strong></span>
-    </p>
-    <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em> C&eacute;dula, Nombre y
-        Apellido , Fecha de Nac...</p>
-    <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Otro contacto ,</p>
-    <p>Si desea agregar m&aacute;s alumnos , presione el signo&nbsp;<img src="/static/img/plus.png" alt="signo_mas"/>
-    </p>
+        <p style="text-align: center;">Para llevar a cabo una inscripci&oacute;n es necesario que se encuentre creado un <strong>Grupo de Clases</strong>  y &eacute;stos tengan cupos disponibles. Siga los siguientes pasos:&nbsp;</p>
+            <p style="text-align: center;">&nbsp;</p>
+
+        <p><span style="color: #003366;"><strong>Paso 1. Agregar Titular : Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
+        <p><br />&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n</p>
+        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula,
+            Foto, Ficha M&eacute;dica, Ficha de Inscripci&oacute;n, Estado</p>
+        <p>&bull;<strong> Siguiente</strong></p>
+        <p><br /><span style="color: #003366;"><strong>Paso 2. Agregar alumno :&nbsp;Puede elegir de la lista , o bien crear uno nuevo.</strong></span></p>
+        <p>&bull; <em><strong>Complete de manera obligatoria los siguientes campos:</strong></em>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n, Estado</p>
+        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong></em> Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula, Tipo Responsable</p>
+
+        <p><br><strong>Si desea agregar m&aacute;s alumnos , presione el signo&nbsp;
+            <img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></br></p>
+
+        <p><br /><span style="color: #003366;"><strong>Paso 3. Agregar Grupo :&nbsp;Puede elegir de la lista, la misma debe estar creada.</strong></span></p>
+        <p><br /><span style="color: #003366;"><strong>Paso 4. Agregar Alumno :&nbsp;Al guardar el registro, se genera la factura</strong></span></p>
 {% endblock %}
