--- a/src/escuela/templates/inscripciones.html
+++ b/src/escuela/templates/inscripciones.html
@@ -100,3 +100,15 @@
         }
     </script>
 {% endblock %}>
+
+{#AYUDA#}
+{% block ayuda_titulo %}
+   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Lista de Inscripciones</strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+    <p style="text-align: center;">Muestra el listado de los alumnos inscriptos esten <strong>Activos ("A") o Inactivos ("I")</strong> </strong>&nbsp;</p>
+    <p style="text-align: center;">&nbsp;</p>
+
+        <p>&bull; <strong>Si desea realizar una Inscripci&oacute;n Nueva , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
+
+{% endblock %}
