--- a/src/main/templates/main/titulares-form.html
+++ b/src/main/templates/main/titulares-form.html
@@ -49,3 +49,27 @@
     </script>
 {% endblock %}
 
+{#AYUDA#}
+{% block ayuda_titulo %}
+   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Nuevo Titular</strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+<p style="text-align: center;">Podr&aacute; visualizar a todos los <strong>Titulares</strong> agregados, ademas de agregar nuevos. Siga los siguientes pasos:&nbsp;</p>
+    <p style="text-align: center;">&nbsp;</p>
+        <p><strong>Si desea agregar m&aacute;s titulares , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
+        <p><span style="color: #003366;"><strong>Opcion 1. Agregar Titular :&nbsp;Ingrese el numero de c&eacute;dula y presione Enter.</strong></span></p>
+        <p>&bull; <strong><em>Complete de manera obligatoria los siguientes campos:</em></strong>C&eacute;dula, Nombre y Apellido, Sexo, Direcci&oacute;n</p>
+        <p>&bull; <em><strong>Complete de manera opcional los siguientes campos:</strong> </em>Tel&eacute;fono, Otro contacto, Fotocopia de C&eacute;dula,
+            Foto, Ficha M&eacute;dica, Ficha de Inscripci&oacute;n, Estado</p>
+        <p>&bull;<strong> Guardar.</strong></p>
+
+        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Alumno :</strong></span></p>
+        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
+
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar alumno:</strong></span></p>
+        <p>&bull; <strong><em>El registro del alumno sera eliminado de forma <strong>permanente</strong>.</em></strong></p>
+
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar alumno:</strong></span></p>
+        <p>&bull; <strong><em>Podemos buscar el resgistro del alumno sea por nombre, apellido u otro campo.  <img src="/static/img/busqueda.png" alt="busqueda" /></em></strong></p>
+{% endblock %}
+
