--- a/src/escuela/templates/clases.html
+++ b/src/escuela/templates/clases.html
@@ -94,3 +94,24 @@
         }
     </script>
 {% endblock %}>
+
+{#AYUDA#}
+{% block ayuda_titulo %}
+   <p style="text-align: center;"><br /><span style="font-size: 14pt;"><strong>Nueva Clase</strong></span></p>
+{% endblock %}
+{% block ayuda_contenido %}
+<p style="text-align: center;">Podr&aacute; visualizar a todas las <strong>Clases</strong> ademas de agregar nuevas. Siga los siguientes pasos:&nbsp;</p>
+    <p style="text-align: center;">&nbsp;</p>
+        <p><strong>Si desea agregar Clases , presione el signo&nbsp;<img src="/static/img/signo_mas.png" alt="signo_mas" /></strong></p>
+        <p><span style="color: #003366;"><strong>Opcion 1. Nueva Clase :&nbsp;Ingrese de la clase y descripci&oacute;n, luego presione Enter.</strong></span></p>
+        <p>&bull;<strong> Guardar.</strong></p>
+
+        <p><br /><span style="color: #003366;"><strong>Opcion 2. Editar Clase :</strong></span></p>
+        <p>&bull; <em><strong>Se muestra el listado y cada campo podr&aacute; ser editado.</strong></em></p>
+
+        <p><br /><span style="color: #003366;"><strong>Opcion 3. : Eliminar Clase:</strong></span></p>
+        <p>&bull; <strong><em>El registro ser&aacute; eliminado de forma <strong>permanente</strong>.</em></strong></p>
+
+        <p><br /><span style="color: #003366;"><strong>Opcion 4. : Buscar Clase:</strong></span></p>
+        <p>&bull; <strong><em>Podemos buscar la clase por su nombre o descripci&oacute;n.</em></strong></p>
+{% endblock %}
